@@ -1,7 +1,7 @@
 /*
  * FilesList.java
  *
- * Copyright (C) 2009-19 by RStudio, Inc.
+ * Copyright (C) 2021 by RStudio, PBC
  *
  * Unless you have received this program directly from RStudio pursuant
  * to the terms of a commercial license agreement with RStudio, then
@@ -60,47 +60,54 @@ import com.google.gwt.view.client.ProvidesKey;
 
 public class FilesList extends Composite
 {
+   public enum SortOrder
+   {
+      Lexicographic,
+      Natural
+   }
+
    public FilesList(final Files.Display.Observer observer,
-                    final FileTypeRegistry fileTypeRegistry)
+                    final FileTypeRegistry fileTypeRegistry,
+                    SortOrder order)
    {
       observer_ = observer;
-      
+      order_ = order;
+
       // create data provider and sort handler
-      dataProvider_ = new ListDataProvider<FileSystemItem>();
-      sortHandler_ = new ColumnSortEvent.ListHandler<FileSystemItem>(
-                                                      dataProvider_.getList());
-      
+      dataProvider_ = new ListDataProvider<>();
+      sortHandler_ = new ColumnSortEvent.ListHandler<>(dataProvider_.getList());
+
       // create cell table
-      filesDataGrid_ = new RStudioDataGrid<FileSystemItem>(
+      filesDataGrid_ = new RStudioDataGrid<>(
                                           15,
                                           FilesListDataGridResources.INSTANCE,
                                           KEY_PROVIDER);
-      selectionModel_ = new MultiSelectionModel<FileSystemItem>(KEY_PROVIDER);
+      selectionModel_ = new MultiSelectionModel<>(KEY_PROVIDER);
       filesDataGrid_.setSelectionModel(
-         selectionModel_, 
-         DefaultSelectionEventManager.<FileSystemItem> createCheckboxManager());
+         selectionModel_,
+         DefaultSelectionEventManager.createCheckboxManager());
       filesDataGrid_.setWidth("100%");
-      
+
       filesDataGrid_.getElement().getStyle().setWhiteSpace(WhiteSpace.NOWRAP);
-      
-      // hook-up data provider 
+
+      // hook-up data provider
       dataProvider_.addDataDisplay(filesDataGrid_);
-      
+
       // add columns
       addSelectionColumn();
       addIconColumn(fileTypeRegistry);
       nameColumn_ = addNameColumn();
       sizeColumn_ = addSizeColumn();
       modifiedColumn_ = addModifiedColumn();
-      
+
       // initialize sorting
       addColumnSortHandler();
-      
+
       // enclose in scroll panel
       layoutPanel_ = new ResizeLayoutPanel();
       initWidget(layoutPanel_);
       layoutPanel_.setWidget(filesDataGrid_);
-      
+
       layoutPanel_.addResizeHandler(new ResizeHandler()
       {
          @Override
@@ -110,40 +117,40 @@ public class FilesList extends Composite
          }
       });
    }
-   
+
    private Column<FileSystemItem, LabeledBoolean> addSelectionColumn()
    {
-      Column<FileSystemItem, LabeledBoolean> checkColumn = 
+      Column<FileSystemItem, LabeledBoolean> checkColumn =
          new Column<FileSystemItem, LabeledBoolean>(new AriaLabeledCheckboxCell(true, false) {
             @Override
-            public void render(Context context, LabeledBoolean value, SafeHtmlBuilder sb) 
+            public void render(Context context, LabeledBoolean value, SafeHtmlBuilder sb)
             {
                // don't render the check box if its for the parent path
                if (parentPath_ == null || context.getIndex() > 0)
                   super.render(context, value, sb);
             }
-         }) 
+         })
          {
             @Override
             public LabeledBoolean getValue(FileSystemItem item)
             {
                return new LabeledBoolean(item.getName(), selectionModel_.isSelected(item));
             }
-            
-            
+
+
          };
       checkColumn.setVerticalAlignment(HasVerticalAlignment.ALIGN_TOP);
-      filesDataGrid_.addColumn(checkColumn); 
+      filesDataGrid_.addColumn(checkColumn);
       filesDataGrid_.setColumnWidth(checkColumn, CHECK_COLUMN_WIDTH_PIXELS, Unit.PX);
-      
+
       return checkColumn;
    }
-  
-   
+
+
    private Column<FileSystemItem, FileIcon> addIconColumn(
                               final FileTypeRegistry fileTypeRegistry)
    {
-      Column<FileSystemItem, FileIcon> iconColumn = 
+      Column<FileSystemItem, FileIcon> iconColumn =
          new Column<FileSystemItem, FileIcon>(new FileIconResourceCell()) {
 
             @Override
@@ -156,10 +163,10 @@ public class FilesList extends Composite
             }
          };
       iconColumn.setSortable(true);
-      filesDataGrid_.addColumn(iconColumn, 
+      filesDataGrid_.addColumn(iconColumn,
             SafeHtmlUtils.fromSafeConstant("<span aria-label=\"File Type\"><br/></span>"));
       filesDataGrid_.setColumnWidth(iconColumn, ICON_COLUMN_WIDTH_PIXELS, Unit.PX);
-    
+
       sortHandler_.setComparator(iconColumn, new FilesListComparator() {
          @Override
          public int doCompare(FileSystemItem arg0, FileSystemItem arg1)
@@ -172,21 +179,21 @@ public class FilesList extends Composite
                return arg0.getExtension().compareTo(arg1.getExtension());
          }
       });
-      
+
       return iconColumn;
    }
 
    private LinkColumn<FileSystemItem> addNameColumn()
    {
       LinkColumn<FileSystemItem> nameColumn = new LinkColumn<FileSystemItem>(
-         dataProvider_, 
-         new OperationWithInput<FileSystemItem>() 
+         dataProvider_,
+         new OperationWithInput<FileSystemItem>()
          {
             public void execute(FileSystemItem input)
             {
-               observer_.onFileNavigation(input);  
-            }   
-         }) 
+               observer_.onFileNavigation(input);
+            }
+         })
          {
             @Override
             public String getValue(FileSystemItem item)
@@ -199,19 +206,29 @@ public class FilesList extends Composite
          };
       nameColumn.setSortable(true);
       filesDataGrid_.addColumn(nameColumn, "Name");
-      
+
       sortHandler_.setComparator(nameColumn, new FilesListComparator() {
          @Override
          public int doCompare(FileSystemItem arg0, FileSystemItem arg1)
          {
-            return arg0.getName().compareToIgnoreCase(arg1.getName());
+            if (order_ == SortOrder.Natural)
+            {
+               // Natural ordering (the default) preserves ascending sequences
+               // in filenames
+               return StringUtil.naturalOrderCompare(arg0.getName(), arg1.getName());
+            }
+            else
+            {
+               // Lexicographic ordering is simpler (just goes char by char)
+               return arg0.getName().compareToIgnoreCase(arg1.getName());
+            }
          }
       });
-      
+
       return nameColumn;
    }
-   
-   
+
+
    private TextColumn<FileSystemItem>  addSizeColumn()
    {
       TextColumn<FileSystemItem> sizeColumn = new TextColumn<FileSystemItem>() {
@@ -220,26 +237,26 @@ public class FilesList extends Composite
             if (!file.isDirectory())
                return StringUtil.formatFileSize(file.getLength());
             else
-               return new String();
-         } 
-      };  
+               return "";
+         }
+      };
       sizeColumn.setSortable(true);
       filesDataGrid_.addColumn(sizeColumn, new ResizableHeader(filesDataGrid_, "Size"));
       filesDataGrid_.setColumnWidth(sizeColumn, SIZE_COLUMN_WIDTH_PIXELS, Unit.PX);
-      
+
       sortHandler_.setComparator(sizeColumn, new FoldersOnBottomComparator() {
          @Override
          public int doItemCompare(FileSystemItem arg0, FileSystemItem arg1)
          {
-            return new Long(arg0.getLength()).compareTo(
-                                             new Long(arg1.getLength()));
+            return Long.valueOf(arg0.getLength()).compareTo(
+                                             Long.valueOf(arg1.getLength()));
          }
       });
-      
+
       return sizeColumn;
    }
 
-   
+
    private TextColumn<FileSystemItem> addModifiedColumn()
    {
       TextColumn<FileSystemItem> modColumn = new TextColumn<FileSystemItem>() {
@@ -248,13 +265,13 @@ public class FilesList extends Composite
             if (!file.isDirectory())
                return StringUtil.formatDate(file.getLastModified());
             else
-               return new String();
-         } 
-      };  
+               return "";
+         }
+      };
       modColumn.setSortable(true);
       filesDataGrid_.addColumn(modColumn, new ResizableHeader(filesDataGrid_, "Modified"));
-      filesDataGrid_.setColumnWidth(modColumn, MODIFIED_COLUMN_WIDTH_PIXELS, Unit.PX); 
-      
+      filesDataGrid_.setColumnWidth(modColumn, MODIFIED_COLUMN_WIDTH_PIXELS, Unit.PX);
+
       sortHandler_.setComparator(modColumn, new FoldersOnBottomComparator() {
          @Override
          public int doItemCompare(FileSystemItem arg0, FileSystemItem arg1)
@@ -262,49 +279,49 @@ public class FilesList extends Composite
             return arg0.getLastModified().compareTo(arg1.getLastModified());
          }
       });
-      
+
       return modColumn;
    }
-   
+
    public void resetColumnWidths()
    {
       onResize(true);
    }
-   
+
    private void addColumnSortHandler()
    {
       filesDataGrid_.addColumnSortHandler(new Handler() {
          @Override
          public void onColumnSort(ColumnSortEvent event)
-         {     
+         {
             ColumnSortList sortList = event.getColumnSortList();
 
             // insert the default initial sort order for size and modified
             if (!applyingProgrammaticSort_)
             {
-               if (event.getColumn().equals(sizeColumn_) && 
+               if (event.getColumn().equals(sizeColumn_) &&
                    forceSizeSortDescending)
                {
                   forceSizeSortDescending = false;
                   forceModifiedSortDescending = true;
-                  sortList.insert(0, 
+                  sortList.insert(0,
                                   new com.google.gwt.user.cellview.client.ColumnSortList.ColumnSortInfo(event.getColumn(), false));
                }
-               else if (event.getColumn().equals(modifiedColumn_) && 
+               else if (event.getColumn().equals(modifiedColumn_) &&
                         forceModifiedSortDescending)
                {
                   forceModifiedSortDescending = false;
                   forceSizeSortDescending = true;
-                  sortList.insert(0, 
+                  sortList.insert(0,
                                   new com.google.gwt.user.cellview.client.ColumnSortList.ColumnSortInfo(event.getColumn(), false));
                }
                else
                {
                   forceModifiedSortDescending = true;
                   forceSizeSortDescending = true;
-               } 
+               }
             }
-            
+
             // record sort order and fire event to observer
             JsArray<ColumnSortInfo> sortOrder = newSortOrderArray();
             for (int i=0; i<sortList.size(); i++)
@@ -312,37 +329,37 @@ public class FilesList extends Composite
                // match the column index
                com.google.gwt.user.cellview.client.ColumnSortList.ColumnSortInfo sortInfo = sortList.get(i);
                Object column = sortInfo.getColumn();
-               
+
                for (int c=0; c<filesDataGrid_.getColumnCount(); c++)
                {
                   if (filesDataGrid_.getColumn(c).equals(column))
-                  { 
+                  {
                      boolean ascending = sortInfo.isAscending();
                      sortOrder.push(ColumnSortInfo.create(c, ascending));
                      break;
                   }
                }
-            }        
+            }
             observer_.onColumnSortOrderChanaged(sortOrder);
-    
+
             // record active sort column ascending state
             activeSortColumnAscending_ = event.isSortAscending();
-            
+
             // delegate the sort
             sortHandler_.onColumnSort(event);
          }
-         
+
          private native final JsArray<ColumnSortInfo> newSortOrderArray()
          /*-{
             return [];
-         }-*/;       
+         }-*/;
          private boolean forceSizeSortDescending = true;
          private boolean forceModifiedSortDescending = true;
       });
    }
-   
-  
-  
+
+
+
    public void setColumnSortOrder(JsArray<ColumnSortInfo> sortOrder)
    {
       if (sortOrder != null)
@@ -356,40 +373,40 @@ public class FilesList extends Composite
          columnSortList.push(nameColumn_);
       }
    }
-   
-   
-   public void displayFiles(FileSystemItem containingPath, 
+
+
+   public void displayFiles(FileSystemItem containingPath,
                             JsArray<FileSystemItem> files)
    {
       // clear the selection
       selectNone();
-      
+
       // set containing path
       containingPath_ = containingPath;
       parentPath_ = containingPath_.getParentPath();
-      
+
       // set page size (+1 for parent path)
       filesDataGrid_.setPageSize(files.length() + 1);
-      
+
       // get underlying list
       List<FileSystemItem> fileList = dataProvider_.getList();
       fileList.clear();
-            
+
       // add entry for parent path if we have one
       if (parentPath_ != null)
          fileList.add(parentPath_);
-      
+
       // add files to table
       for (int i=0; i<files.length(); i++)
          fileList.add(files.get(i));
-           
+
       // apply sort list
       applyColumnSortList();
-      
+
       // fire selection changed
       observer_.onFileSelectionChanged();
    }
-   
+
    public void selectAll()
    {
       for (FileSystemItem item : dataProvider_.getList())
@@ -398,24 +415,24 @@ public class FilesList extends Composite
             selectionModel_.setSelected(item, true);
       }
    }
-   
+
    public void selectNone()
    {
       selectionModel_.clear();
    }
-   
-   
+
+
    public ArrayList<FileSystemItem> getSelectedFiles()
-   {    
+   {
       // first make sure there are no leftover items in the selected set
       Set<FileSystemItem> selectedSet = selectionModel_.getSelectedSet();
       selectedSet.retainAll(dataProvider_.getList());
-   
-      return new ArrayList<FileSystemItem>(selectedSet);
+
+      return new ArrayList<>(selectedSet);
    }
-   
+
    public void updateWithAction(FileChange viewAction)
-   {        
+   {
       final FileSystemItem file = viewAction.getFile();
       final List<FileSystemItem> files = getFiles();
       switch(viewAction.getType())
@@ -440,7 +457,7 @@ public class FilesList extends Composite
             }
          }
          break;
-         
+
       case FileChange.MODIFIED:
          {
             int row = rowForFile(file);
@@ -454,14 +471,14 @@ public class FilesList extends Composite
             }
          }
          break;
- 
+
       case FileChange.DELETE:
          {
             int row = rowForFile(file);
             if (row != -1)
             {
                files.remove(row);
-               
+
                // if a file is deleted and then re-added within the same
                // event loop (as occurs when gedit saves a text file) the
                // table doesn't always update correctly (it has a duplicate
@@ -471,14 +488,14 @@ public class FilesList extends Composite
             }
          }
          break;
-      
+
       default:
          Debug.log("Unexpected file change type: " + viewAction.getType());
-         
+
          break;
       }
    }
-   
+
    public void renameFile(FileSystemItem from, FileSystemItem to)
    {
       int index = getFiles().indexOf(from);
@@ -488,34 +505,34 @@ public class FilesList extends Composite
          getFiles().set(index, to);
       }
    }
-   
+
    private List<FileSystemItem> getFiles()
    {
       return dataProvider_.getList();
    }
-   
+
    private int rowForFile(FileSystemItem file)
    {
       List<FileSystemItem> files = getFiles();
       for (int i=0; i<files.size(); i++)
          if (files.get(i).equalTo(file))
-            return i ;
-      
+            return i;
+
       return -1;
    }
-   
+
    private void applyColumnSortList()
    {
       applyingProgrammaticSort_ = true;
-      ColumnSortEvent.fire(filesDataGrid_, 
+      ColumnSortEvent.fire(filesDataGrid_,
                            filesDataGrid_.getColumnSortList());
       applyingProgrammaticSort_ = false;
    }
-   
+
    public void redraw()
    {
       onResize(false);
-      
+
       // deferred to ensure that browser has responded to our
       // resize request
       Scheduler.get().scheduleDeferred(new ScheduledCommand()
@@ -527,7 +544,7 @@ public class FilesList extends Composite
          }
       });
    }
-   
+
    public void onResize(boolean forceResize)
    {
       onResize(
@@ -535,7 +552,7 @@ public class FilesList extends Composite
             layoutPanel_.getOffsetHeight(),
             forceResize);
    }
-   
+
    private void onResize(int width,
                          int height,
                          boolean forceResize)
@@ -588,8 +605,8 @@ public class FilesList extends Composite
       }
 
    }
-   
-   private static final ProvidesKey<FileSystemItem> KEY_PROVIDER = 
+
+   private static final ProvidesKey<FileSystemItem> KEY_PROVIDER =
       new ProvidesKey<FileSystemItem>() {
          @Override
          public Object getKey(FileSystemItem item)
@@ -597,15 +614,15 @@ public class FilesList extends Composite
             return item.getPath();
          }
     };
-    
+
     // comparator which ensures that the parent path is always on top
     private abstract class FilesListComparator implements Comparator<FileSystemItem>
-    {     
+    {
        @Override
        public int compare(FileSystemItem arg0, FileSystemItem arg1)
        {
           int ascendingFactor = activeSortColumnAscending_ ? -1 : 1;
-          
+
           if (arg0 == parentPath_)
              return 1 * ascendingFactor;
           else if (arg1 == parentPath_)
@@ -613,10 +630,10 @@ public class FilesList extends Composite
           else
              return doCompare(arg0, arg1);
        }
-       
-       protected abstract int doCompare(FileSystemItem arg0, FileSystemItem arg1);    
+
+       protected abstract int doCompare(FileSystemItem arg0, FileSystemItem arg1);
     }
-    
+
     private abstract class SeparateFoldersComparator extends FilesListComparator
     {
        public SeparateFoldersComparator(boolean foldersOnBottom)
@@ -626,11 +643,11 @@ public class FilesList extends Composite
           else
              sortFactor_ = -1;
        }
-       
+
        protected int doCompare(FileSystemItem arg0, FileSystemItem arg1)
        {
           int ascendingResult = activeSortColumnAscending_ ? 1 : -1;
-          
+
           if (arg0.isDirectory() && !arg1.isDirectory())
              return ascendingResult * sortFactor_;
           else if (arg1.isDirectory() && !arg0.isDirectory())
@@ -638,65 +655,66 @@ public class FilesList extends Composite
           else
              return doItemCompare(arg0, arg1);
        }
-       
-       protected abstract int doItemCompare(FileSystemItem arg0, FileSystemItem arg1);    
-       
-       private final int sortFactor_ ;   
+
+       protected abstract int doItemCompare(FileSystemItem arg0, FileSystemItem arg1);
+
+       private final int sortFactor_;
     }
-    
+
     private abstract class FoldersOnBottomComparator extends SeparateFoldersComparator
     {
-       public FoldersOnBottomComparator() 
-       { 
-          super(true); 
+       public FoldersOnBottomComparator()
+       {
+          super(true);
        }
     }
-    
+
     @SuppressWarnings("unused")
     private abstract class FoldersOnTopComparator extends SeparateFoldersComparator
     {
-       public FoldersOnTopComparator() 
-       { 
-          super(false); 
+       public FoldersOnTopComparator()
+       {
+          super(false);
        }
     }
-    
-   
+
+
    private FileSystemItem containingPath_ = null;
    private FileSystemItem parentPath_ = null;
-  
-   private final DataGrid<FileSystemItem> filesDataGrid_; 
+
+   private final DataGrid<FileSystemItem> filesDataGrid_;
    private final LinkColumn<FileSystemItem> nameColumn_;
    private final TextColumn<FileSystemItem> sizeColumn_;
    private final TextColumn<FileSystemItem> modifiedColumn_;
+   private final SortOrder order_;
    private boolean activeSortColumnAscending_ = true;
    private boolean applyingProgrammaticSort_ = false;
-   
-   
+
+
    private final MultiSelectionModel<FileSystemItem> selectionModel_;
    private final ListDataProvider<FileSystemItem> dataProvider_;
    private final ColumnSortEvent.ListHandler<FileSystemItem> sortHandler_;
 
-   private final Files.Display.Observer observer_ ;
-   private final ResizeLayoutPanel layoutPanel_ ;  
-   
+   private final Files.Display.Observer observer_;
+   private final ResizeLayoutPanel layoutPanel_;
+
    private static final int CHECK_COLUMN_WIDTH_PIXELS = 30;
    private static final int ICON_COLUMN_WIDTH_PIXELS = 26;
    private static final int SIZE_COLUMN_WIDTH_PIXELS = 80;
    private static final int MODIFIED_COLUMN_WIDTH_PIXELS = 160;
-   
+
    private static final int BOUNDARY_WIDTH_PIXELS = 500;
-   private static final int MINIMUM_NAME_COLUMN_WIDTH_PIXELS = 
+   private static final int MINIMUM_NAME_COLUMN_WIDTH_PIXELS =
          BOUNDARY_WIDTH_PIXELS -
          CHECK_COLUMN_WIDTH_PIXELS -
          ICON_COLUMN_WIDTH_PIXELS -
          SIZE_COLUMN_WIDTH_PIXELS -
          MODIFIED_COLUMN_WIDTH_PIXELS;
-   
+
    private static final int STATE_UNKNOWN = 0;
    private static final int STATE_SMALL   = 1;
    private static final int STATE_LARGE   = 2;
 
    private int state_ = STATE_UNKNOWN;
-   
+
 }
